Bug 1522453 - Prevent mailing list member iteration from failing if a member has no email address. r=mkmelin